This patch scrolls the parent container while navigating through the radio input using keyboard

BUG=674567

Review-Url: https://codereview.chromium.org/2620843004
Cr-Commit-Position: refs/heads/master@{#443999}

Former-commit-id: f817f12c1ee224c86e0baf45c816d89dfb345aa3